--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
 	},
 	"require" : {
 		"typo3/cms-core" : ">=4.5.0 <=7.6.99",
-		"digedag/rn-base" : ">=0.16.3"
+		"typo3-ter/rn-base" : ">=0.16.3"
 	},
 	"autoload": {
 		"classmap": ["hooks/", "interface/", "sanitizer/", "util/"],
