--- a/composer.json
+++ b/composer.json
@@ -1,33 +1,47 @@
 {
-	"name" : "dmk/mksanitizedparameters",
-	"description" : "Sanitize $_REQUEST, $_POST and $_GET before the processing of TYPO3 in backend or frontend starts. Take a look into the documentation how to add your own rules or see which one exist.",
-	"version" : "2.0.3",
-	"type" : "typo3-cms-extension",
-	"keywords" : ["TYPO3 CMS", "parameter", "sanitize", "security"],
-	"homepage" : "http://www.dmk-ebusiness.de/",
-	"license" : "GPL-2.0+",
-	"authors" : [
-		{
-			"name" : "Hannes Bochmann",
-			"email" : "hannes.bochmann@dmk-ebusiness.de",
-			"role" : "Developer"
-		}
-	],
-	"support": {
-		"email": "dev@dmk-ebusiness.de",
-		"source": "https://github.com/DMKEBUSINESSGMBH/typo3-mksanitizedparameters",
-		"issues": "https://github.com/DMKEBUSINESSGMBH/typo3-mksanitizedparameters"
-	},
-	"replace": {
-		"mksanitizedparameters": "self.version",
-		"typo3-ter/mksanitizedparameters": "self.version"
-	},
-	"require" : {
-		"typo3/cms-core" : ">=4.5.0 <=8.7.99",
-		"typo3-ter/rn-base" : ">=0.16.3"
-	},
-	"autoload": {
-		"classmap": ["hooks/", "interface/", "sanitizer/", "util/"],
-		"files": ["class.tx_mksanitizedparameters.php", "class.tx_mksanitizedparameters_Rules.php", "class.tx_mksanitizedparameters_StealthMode.php"]
-	}
+    "name": "dmk/mksanitizedparameters",
+    "description": "Sanitize $_REQUEST, $_POST and $_GET before the processing of TYPO3 in backend or frontend starts. Take a look into the documentation how to add your own rules or see which one exist.",
+    "version": "2.0.3",
+    "type": "typo3-cms-extension",
+    "keywords": [
+        "TYPO3 CMS",
+        "parameter",
+        "sanitize",
+        "security"
+    ],
+    "homepage": "http://www.dmk-ebusiness.de/",
+    "license": "GPL-2.0+",
+    "authors": [
+        {
+            "name": "Hannes Bochmann",
+            "email": "hannes.bochmann@dmk-ebusiness.de",
+            "role": "Developer"
+        }
+    ],
+    "support": {
+        "email": "dev@dmk-ebusiness.de",
+        "source": "https://github.com/DMKEBUSINESSGMBH/typo3-mksanitizedparameters",
+        "issues": "https://github.com/DMKEBUSINESSGMBH/typo3-mksanitizedparameters"
+    },
+    "replace": {
+        "mksanitizedparameters": "self.version",
+        "typo3-ter/mksanitizedparameters": "self.version"
+    },
+    "require": {
+        "typo3/cms-core": ">=4.5.0 <=8.7.99",
+        "typo3-ter/rn-base": ">=0.16.3"
+    },
+    "autoload": {
+        "classmap": [
+            "hooks/",
+            "interface/",
+            "sanitizer/",
+            "util/"
+        ],
+        "files": [
+            "class.tx_mksanitizedparameters.php",
+            "class.tx_mksanitizedparameters_Rules.php",
+            "class.tx_mksanitizedparameters_StealthMode.php"
+        ]
+    }
 }
