--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "dmk/mksanitizedparameters",
     "description": "Sanitize $_REQUEST, $_POST and $_GET before the processing of TYPO3 in backend or frontend starts. Take a look into the documentation how to add your own rules or see which one exist.",
-"version" : "2.0.4",
+    "version": "3.0.0",
     "type": "typo3-cms-extension",
     "keywords": [
         "TYPO3 CMS",
@@ -28,8 +28,8 @@
         "typo3-ter/mksanitizedparameters": "self.version"
     },
     "require": {
-        "typo3/cms-core": ">=4.5.0 <=8.7.99",
-        "typo3-ter/rn-base": ">=0.16.3"
+        "typo3/cms": "~4.5 || ~6.2 || ~7.6 || ~8.7",
+        "digedag/rn-base": ">=1.4"
     },
     "autoload": {
         "classmap": [
