--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "typo3-ter/mksanitizedparameters": "self.version"
     },
     "require": {
-        "typo3/cms": "~6.2 || ~7.6 || ~8.7 || ~9.5",
+        "typo3/cms-core": "~6.2 || ~7.6 || ~8.7 || ~9.5",
         "digedag/rn-base": "dev-migration_to_95"
     },
     "autoload": {
