--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     },
     "require": {
         "typo3/cms-core": "~8.7 || ~9.5",
-        "digedag/rn-base": "dev-migration_to_95"
+        "digedag/rn-base": ">=1.10.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "~2@stable"
