--- a/composer.json
+++ b/composer.json
@@ -27,13 +27,20 @@
         "mksanitizedparameters": "self.version",
         "typo3-ter/mksanitizedparameters": "self.version"
     },
+    "repositories": [{
+        "type": "vcs",
+        "url": "https://github.com/Baachi/phpstan-typo3.git"
+    }
+    ],
     "require": {
         "typo3/cms-core": "~8.7 || ~9.5",
         "digedag/rn-base": ">=1.10.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "~2@stable",
-        "phpstan/phpstan": "^0.11"
+        "phpstan/phpstan": "^0.11",
+        "saschaegerer/phpstan-typo3": "dev-feature/update-phpstan",
+        "typo3/testing-framework": "*"
     },
     "autoload": {
         "classmap": [
