--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,5 +1,6 @@
 includes:
     - .Build/vendor/saschaegerer/phpstan-typo3/extension.neon
+    - .Build/vendor/dmk/phpstan-rnbase/extension.neon
 parameters:
     level: max
     paths:
