--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
         "friendsofphp/php-cs-fixer": "~2@stable",
         "phpstan/phpstan": "^0.11",
         "saschaegerer/phpstan-typo3": "dev-feature/update-phpstan",
-        "typo3/testing-framework": "*"
+        "typo3/testing-framework": "*",
+        "dmk/phpstan-rnbase": "^0.0.1"
     },
     "autoload": {
         "classmap": [
