--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "digedag/rn-base": ">=1.10.0"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "~2@stable"
+        "friendsofphp/php-cs-fixer": "~2@stable",
+        "nimut/testing-framework": "^4.0"
     },
     "autoload": {
         "classmap": [
