--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
     },
     "require": {
         "typo3/cms-core": "~8.7 || ~9.5",
-        "digedag/rn-base": ">=1.10.0"
+        "digedag/rn-base": ">=1.10.0",
+        "dmk/mklib": "~8.7 || ~9.5"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "~2@stable",
