--- a/composer.json
+++ b/composer.json
@@ -28,11 +28,11 @@
     },
     "require": {
         "typo3/cms-core": "^8.7.32 || ^9.5.23 || ^10.4.10",
-        "digedag/rn-base": ">=1.10.0",
-        "dmk/mklib": "~9.5"
+        "digedag/rn-base": ">=1.10.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "~2@stable",
+        "dmk/mklib": "~9.5",
         "nimut/testing-framework": "^4.0"
     },
     "autoload": {
