--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ script:
     - >
         echo;
         echo "Running unit tests";
-        .Build/bin/phpunit -c phpunit.xml.dist --coverage-text --coverage-clover=.Build/coverage.clover
+        .Build/bin/phpunit -c phpunit.xml.dist
     - >
         echo;
         echo "Running php lint";
