--- a/.travis.yml
+++ b/.travis.yml
@@ -7,41 +7,18 @@ notifications:
         on_success: change
         on_failure: always
 
-php:
-    - 7.0
-    - 7.1
-    - 7.2
-    - 7.3
-
-env:
-    - TYPO3_VERSION="^8.7.0"
-    - TYPO3_VERSION="^9.5.0"
-
-matrix:
-    exclude:
-        - php: 7.0
-          env: TYPO3_VERSION="^9.5.0"
-        - php: 7.1
-          env: TYPO3_VERSION="^9.5.0"
-
-sudo: false
-
-addons:
-    apt:
-        packages:
-            - parallel
-
 cache:
     directories:
-        - $HOME/.composer/cache
+        - $HOME/.config/composer/cache
 
 before_install:
+    - phpenv config-rm xdebug.ini
     - composer self-update
     - composer --version
 
 before_script:
-    - composer require typo3/minimal="$TYPO3_VERSION"
-    # Restore composer.json
+    - composer remove --no-update typo3/cms typo3/cms-core
+    - composer require "$TYPO3_CORE"
     - git checkout composer.json
     - export TYPO3_PATH_WEB=$PWD/.Build/Web
 
@@ -50,7 +27,46 @@ script:
         echo;
         echo "Running unit tests";
         .Build/bin/phpunit -c phpunit.xml.dist
-    - >
-        echo;
-        echo "Running php lint";
-        find . -name \*.php ! -path "./.Build/*" | parallel --gnu php -d display_errors=stderr -l {} > /dev/null \;
+
+jobs:
+    include:
+        -
+            stage: test
+            php: 7.1
+            env: TYPO3_CORE="typo3/cms=^8.7.32"
+        -
+            stage: test
+            php: 7.2
+            env: TYPO3_CORE="typo3/cms=^8.7.32"
+        -
+            stage: test
+            php: 7.3
+            env: TYPO3_CORE="typo3/cms=^8.7.32"
+        -
+            stage: test
+            php: 7.4
+            env: TYPO3_CORE="typo3/cms=^8.7.32"
+        -
+            stage: test
+            php: 7.2
+            env: TYPO3_CORE="typo3/minimal=^9.5"
+        -
+            stage: test
+            php: 7.3
+            env: TYPO3_CORE="typo3/minimal=^9.5"
+        -
+            stage: test
+            php: 7.4
+            env: TYPO3_CORE="typo3/minimal=^9.5"
+        -
+            stage: test
+            php: 7.2
+            env: TYPO3_CORE="typo3/minimal=^10.4"
+        -
+            stage: test
+            php: 7.3
+            env: TYPO3_CORE="typo3/minimal=^10.4"
+        -
+            stage: test
+            php: 7.4
+            env: TYPO3_CORE="typo3/minimal=^10.4"
