--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -20,7 +20,7 @@
 
     <testsuites>
         <testsuite name="Unit Tests">
-            <directory>tests/</directory>
+            <directory>Tests/</directory>
         </testsuite>
     </testsuites>
 
