Add autoloading informations

--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
             "sanitizer",
             "hooks",
             "class.tx_mksanitizedparameters.php",
-            "class.tx_mksanitizedparameters_Rules.php"
+            "class.tx_mksanitizedparameters_Rules.php",
+            "class.tx_mksanitizedparameters_StealthMode.php"
         ]
     },
     "autoload-dev": {
