Set composer version to 1
required by typo3/cms-composer-installers

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ cache:
 
 before_install:
     - phpenv config-rm xdebug.ini
-    - composer self-update
+    - composer self-update --1
     - composer --version
 
 before_script:
