--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,14 @@
         "typo3/cms-core": "^8.7.32 || ^9.5.23 || ^10.4.10"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "~2@stable",
-        "nimut/testing-framework": "^4.0"
+        "php-parallel-lint/php-parallel-lint": "^1.2",
+        "sebastian/phpcpd": "^4.0 || ^5.0",
+        "friendsofphp/php-cs-fixer": "^2.16",
+        "phpmd/phpmd": "^2.9",
+        "phpstan/phpstan": "^0.12.8",
+        "phpstan/extension-installer": "^1.0",
+        "saschaegerer/phpstan-typo3": "^0.13",
+        "nimut/testing-framework": "^4.0 || ^5.0"
     },
     "autoload": {
         "psr-4": {
@@ -63,9 +69,24 @@
             "[ -L .Build/Web/typo3conf/ext/mksanitizedparameters ] || ln -snvf ../../../../. .Build/Web/typo3conf/ext/mksanitizedparameters",
             "[ -L .Build/Web/typo3conf/LocalConfiguration.php ] || ln -snvf ../../../Tests/Fixtures/LocalConfiguration.php .Build/Web/typo3conf/LocalConfiguration.php"
         ],
+        "lint:php": [
+            "[ -e .Build/bin/parallel-lint ] || composer update",
+            ".Build/bin/parallel-lint ./Classes"
+        ],
+        "lint": [
+            "@lint:php"
+        ],
         "test:phpcs": [
             "[ -e .Build/bin/php-cs-fixer ] || composer update --ansi",
             ".Build/bin/php-cs-fixer fix -v --dry-run --diff  --ansi"
+        ],
+        "test:phpmd": [
+            "[ -e .Build/bin/phpmd ] || composer update --ansi",
+            ".Build/bin/phpmd ./Classes/ text phpmd.xml"
+        ],
+        "test:phpstan": [
+            "[ -e .Build/bin/phpstan ] || composer update --ansi",
+            ".Build/bin/phpstan analyse -c phpstan.neon --memory-limit=512M --ansi"
         ],
         "test:phpunit": [
             "[ -e .Build/bin/phpunit ] || composer update --ansi",
@@ -73,6 +94,8 @@
         ],
         "test": [
             "@test:phpcs",
+            "@test:phpmd",
+            "@test:phpstan",
             "@test:phpunit"
         ],
         "fix:phpcs": [
