Move old deprecated classes to legacy folder and correct autoloading

--- a/composer.json
+++ b/composer.json
@@ -44,11 +44,7 @@
             "DMK\\MkSanitizedParameters\\": "Classes"
         },
         "classmap": [
-            "sanitizer",
-            "hooks",
-            "class.tx_mksanitizedparameters.php",
-            "class.tx_mksanitizedparameters_Rules.php",
-            "class.tx_mksanitizedparameters_StealthMode.php"
+            "Classes/Legacy"
         ]
     },
     "autoload-dev": {
