Copy local configuration fixture instead of symlinking
Test bootstrap changes the local configuration and adds extension configurations

--- a/composer.json
+++ b/composer.json
@@ -63,7 +63,7 @@
         "post-autoload-dump": [
             "mkdir -p .Build/Web/typo3conf/ext/",
             "[ -L .Build/Web/typo3conf/ext/mksanitizedparameters ] || ln -snvf ../../../../. .Build/Web/typo3conf/ext/mksanitizedparameters",
-            "[ -L .Build/Web/typo3conf/LocalConfiguration.php ] || ln -snvf ../../../Tests/Fixtures/LocalConfiguration.php .Build/Web/typo3conf/LocalConfiguration.php"
+            "[ -f .Build/Web/typo3conf/LocalConfiguration.php ] || cp Tests/Fixtures/LocalConfiguration.php .Build/Web/typo3conf/LocalConfiguration.php"
         ],
         "lint:php": [
             "[ -e .Build/bin/parallel-lint ] || composer update",
