--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,13 +1,14 @@
 parameters:
     level: 6
-    autoload_files:
+    bootstrapFiles:
         - "%currentWorkingDirectory%/.Build/vendor/autoload.php"
     paths:
         - %currentWorkingDirectory%/Classes
         - %currentWorkingDirectory%/ext_localconf.php
         - %currentWorkingDirectory%/ext_emconf.php
     reportUnmatchedIgnoredErrors: false
-    excludes_analyse:
+    excludePaths:
         - %currentWorkingDirectory%/Classes/Legacy/*
     ignoreErrors:
+        - '#Parameter \#[\d] \.\.\.\$predicates of method TYPO3\\CMS\\Core\\Database\\Query\\QueryBuilder::where\(\) expects array<int, mixed>\|Doctrine\\DBAL\\Query\\Expression\\CompositeExpression, string given\.#'
         - '#Constant TYPO3_MODE not found#'
