--- a/composer.json
+++ b/composer.json
@@ -26,17 +26,17 @@
         "typo3-ter/mksanitizedparameters": "self.version"
     },
     "require": {
-        "typo3/cms-core": "^8.7.32 || ^9.5.24 || ^10.4.14"
+        "typo3/cms-core": "^8.7.32 || ^9.5.31 || ^10.4.23"
     },
     "require-dev": {
         "php-parallel-lint/php-parallel-lint": "^1.2",
-        "sebastian/phpcpd": "^4.0 || ^5.0",
-        "friendsofphp/php-cs-fixer": "^2.16",
-        "phpmd/phpmd": "^2.9",
-        "phpstan/phpstan": "^0.12.8",
-        "phpstan/extension-installer": "^1.0",
-        "saschaegerer/phpstan-typo3": "^0.13",
-        "nimut/testing-framework": "^4.0 || ^5.0"
+        "sebastian/phpcpd": "4.0 || ^5.0",
+        "friendsofphp/php-cs-fixer": "^3.3",
+        "phpmd/phpmd": "^2.11",
+        "phpstan/phpstan": "^1.1",
+        "phpstan/extension-installer": "^1.1",
+        "saschaegerer/phpstan-typo3": "^1.0",
+        "nimut/testing-framework": "^5.0"
     },
     "autoload": {
         "psr-4": {
@@ -68,6 +68,11 @@
             "mkdir -p .Build/Web/typo3conf/ext/",
             "[ -L .Build/Web/typo3conf/ext/mksanitizedparameters ] || ln -snvf ../../../../. .Build/Web/typo3conf/ext/mksanitizedparameters",
             "[ -f .Build/Web/typo3conf/LocalConfiguration.php ] || cp Tests/Fixtures/LocalConfiguration.php .Build/Web/typo3conf/LocalConfiguration.php"
+        ],
+        "runqs": [
+            "@fix",
+            "@lint",
+            "@test"
         ],
         "lint:php": [
             "[ -e .Build/bin/parallel-lint ] || composer update",
