--- a/composer.json
+++ b/composer.json
@@ -26,25 +26,22 @@
         "typo3-ter/mksanitizedparameters": "self.version"
     },
     "require": {
-        "typo3/cms-core": "^8.7.32 || ^9.5.31 || ^10.4.23"
+        "typo3/cms-core": "^10.4.23 || ^11.5.5"
     },
     "require-dev": {
         "php-parallel-lint/php-parallel-lint": "^1.2",
-        "sebastian/phpcpd": "4.0 || ^5.0",
+        "sebastian/phpcpd": "^5.0",
         "friendsofphp/php-cs-fixer": "^3.3",
         "phpmd/phpmd": "^2.11",
         "phpstan/phpstan": "^1.1",
         "phpstan/extension-installer": "^1.1",
         "saschaegerer/phpstan-typo3": "^1.0",
-        "nimut/testing-framework": "^5.0"
+        "nimut/testing-framework": "^6.0"
     },
     "autoload": {
         "psr-4": {
             "DMK\\MkSanitizedParameters\\": "Classes"
-        },
-        "classmap": [
-            "Classes/Legacy"
-        ]
+        }
     },
     "autoload-dev": {
         "classmap": [
