--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "typo3-ter/mksanitizedparameters": "self.version"
     },
     "require": {
+        "php": ">=7.3.0",
         "typo3/cms-core": "^10.4.23 || ^11.5.5"
     },
     "require-dev": {
