--- a/.github/workflows/phpci.yml
+++ b/.github/workflows/phpci.yml
@@ -21,6 +21,7 @@ jobs:
                 php-version:
                     - "7.3"
                     - "7.4"
+                    - "8.0"
 
         steps:
             -
@@ -68,6 +69,7 @@ jobs:
                     - "test:phpstan"
                 php-version:
                     - "7.4"
+                    - "8.0"
 
         steps:
             -
@@ -121,6 +123,9 @@ jobs:
                     -
                         typo3-version: "^11.5"
                         php-version: "7.4"
+                    -
+                        typo3-version: "^11.5"
+                        php-version: "8.0"
 
         steps:
             -
