--- a/composer.json
+++ b/composer.json
@@ -26,17 +26,19 @@
         "typo3-ter/mksanitizedparameters": "self.version"
     },
     "require": {
-        "php": ">=7.3.0",
+        "php": "^7.3 || ^8.0",
         "typo3/cms-core": "^10.4.23 || ^11.5.5"
     },
     "require-dev": {
-        "php-parallel-lint/php-parallel-lint": "^1.2",
-        "sebastian/phpcpd": "^5.0",
+        "php-parallel-lint/php-parallel-lint": "^1.3",
+        "sebastian/phpcpd": "^5.0 || ^6.0",
         "friendsofphp/php-cs-fixer": "^3.3",
         "phpmd/phpmd": "^2.11",
         "phpstan/phpstan": "^1.1",
         "phpstan/extension-installer": "^1.1",
         "saschaegerer/phpstan-typo3": "^1.0",
+        "phpunit/phpunit": "^9.5",
+        "phpspec/prophecy-phpunit": "^2.0.1",
         "nimut/testing-framework": "^6.0"
     },
     "autoload": {
