Add php compatibility checks

--- a/.github/workflows/phpci.yml
+++ b/.github/workflows/phpci.yml
@@ -65,6 +65,7 @@ jobs:
             matrix:
                 command:
                     - "test:phpcs"
+                    - "test:phpcompatibility"
                     - "test:phpmd"
                     - "test:phpstan"
                 php-version:
