--- a/.github/workflows/phpci.yml
+++ b/.github/workflows/phpci.yml
@@ -22,6 +22,7 @@ jobs:
                     - "7.3"
                     - "7.4"
                     - "8.0"
+                    - "8.1"
 
         steps:
             -
@@ -71,6 +72,7 @@ jobs:
                 php-version:
                     - "7.4"
                     - "8.0"
+                    - "8.1"
 
         steps:
             -
@@ -127,6 +129,9 @@ jobs:
                     -
                         typo3-version: "^11.5"
                         php-version: "8.0"
+                    -
+                        typo3-version: "^11.5"
+                        php-version: "8.1"
 
         steps:
             -
