--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "typo3-ter/mksanitizedparameters": "self.version"
     },
     "require": {
-        "php": "^7.3 || ^8.0",
+        "php": "^7.3 || ^8.0 || ^8.1",
         "typo3/cms-core": "^10.4.23 || ^11.5.5"
     },
     "require-dev": {
@@ -100,7 +100,8 @@
         "test:phpcompatibility": [
             "@test:phpcompatibility:7.3",
             "@test:phpcompatibility:7.4",
-            "@test:phpcompatibility:8.0"
+            "@test:phpcompatibility:8.0",
+            "@test:phpcompatibility:8.1"
         ],
         "test:phpcompatibility:7.3": [
             "[ -e .Build/bin/phpcs ] || composer update",
@@ -113,6 +114,10 @@
         "test:phpcompatibility:8.0": [
             "[ -e .Build/bin/phpcs ] || composer update",
             ".Build/bin/phpcs --ignore=.Build/* -p . --standard=.Build/vendor/phpcompatibility/php-compatibility/PHPCompatibility --runtime-set testVersion 8.0"
+        ],
+        "test:phpcompatibility:8.1": [
+            "[ -e .Build/bin/phpcs ] || composer update",
+            ".Build/bin/phpcs --ignore=.Build/* -p . --standard=.Build/vendor/phpcompatibility/php-compatibility/PHPCompatibility --runtime-set testVersion 8.1"
         ],
         "test:phpmd": [
             "[ -e .Build/bin/phpmd ] || composer update --ansi",
