--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,7 @@
         "vendor-dir": ".Build/vendor",
         "bin-dir": ".Build/bin",
         "preferred-install": {
-            "typo3/cms": "source"
+            "*": "dist"
         },
         "allow-plugins": {
             "typo3/cms-composer-installers": true,
