--- a/composer.json
+++ b/composer.json
@@ -26,21 +26,20 @@
         "typo3-ter/mksanitizedparameters": "self.version"
     },
     "require": {
-        "php": "^7.3 || ^7.4 || ^8.0 || ^8.1",
-        "typo3/cms-core": "^10.4.23 || ^11.5.5"
+        "php": "^7.4 || ^8.0",
+        "typo3/cms-core": "^11.5.7 || ^12.4.7"
     },
     "require-dev": {
         "php-parallel-lint/php-parallel-lint": "^1.3",
         "sebastian/phpcpd": "^5.0 || ^6.0",
         "friendsofphp/php-cs-fixer": "^3.3",
         "phpcompatibility/php-compatibility": "^9.3.5",
-        "phpmd/phpmd": "^2.11",
+        "phpmd/phpmd": "^2.14",
         "phpstan/phpstan": "^1.1",
-        "phpstan/extension-installer": "^1.1",
-        "saschaegerer/phpstan-typo3": "^1.0",
-        "phpunit/phpunit": "^9.5",
+        "phpstan/extension-installer": "^1.3",
+        "saschaegerer/phpstan-typo3": "^1.9",
         "phpspec/prophecy-phpunit": "^2.0.1",
-        "nimut/testing-framework": "^6.0"
+        "typo3/testing-framework": "^6.0 || ^7.0"
     },
     "autoload": {
         "psr-4": {
@@ -66,7 +65,7 @@
     },
     "extra": {
         "branch-alias" : {
-            "dev-11.5": "11.0.x-dev"
+            "dev-12.4": "12.0.x-dev"
         },
         "typo3/cms": {
             "cms-package-dir": "{$vendor-dir}/typo3/cms",
@@ -76,11 +75,6 @@
         }
     },
     "scripts": {
-        "post-autoload-dump": [
-            "mkdir -p .Build/Web/typo3conf/ext/",
-            "[ -L .Build/Web/typo3conf/ext/mksanitizedparameters ] || ln -snvf ../../../../. .Build/Web/typo3conf/ext/mksanitizedparameters",
-            "[ -f .Build/Web/typo3conf/LocalConfiguration.php ] || cp Tests/Fixtures/LocalConfiguration.php .Build/Web/typo3conf/LocalConfiguration.php"
-        ],
         "runqs": [
             "@fix",
             "@lint",
@@ -98,14 +92,10 @@
             ".Build/bin/php-cs-fixer fix -v --dry-run --diff  --ansi"
         ],
         "test:phpcompatibility": [
-            "@test:phpcompatibility:7.3",
             "@test:phpcompatibility:7.4",
             "@test:phpcompatibility:8.0",
-            "@test:phpcompatibility:8.1"
-        ],
-        "test:phpcompatibility:7.3": [
-            "[ -e .Build/bin/phpcs ] || composer update",
-            ".Build/bin/phpcs --ignore=.Build/* -p . --standard=.Build/vendor/phpcompatibility/php-compatibility/PHPCompatibility --runtime-set testVersion 7.3"
+            "@test:phpcompatibility:8.1",
+            "@test:phpcompatibility:8.2"
         ],
         "test:phpcompatibility:7.4": [
             "[ -e .Build/bin/phpcs ] || composer update",
@@ -119,6 +109,10 @@
             "[ -e .Build/bin/phpcs ] || composer update",
             ".Build/bin/phpcs --ignore=.Build/* -p . --standard=.Build/vendor/phpcompatibility/php-compatibility/PHPCompatibility --runtime-set testVersion 8.1"
         ],
+        "test:phpcompatibility:8.2": [
+            "[ -e .Build/bin/phpcs ] || composer update",
+            ".Build/bin/phpcs --ignore=.Build/* -p . --standard=.Build/vendor/phpcompatibility/php-compatibility/PHPCompatibility --runtime-set testVersion 8.2"
+        ],
         "test:phpmd": [
             "[ -e .Build/bin/phpmd ] || composer update --ansi",
             ".Build/bin/phpmd ./Classes/ text phpmd.xml"
@@ -129,7 +123,7 @@
         ],
         "test:phpunit": [
             "[ -e .Build/bin/phpunit ] || composer update --ansi",
-            "export TYPO3_PATH_WEB=$PWD/.Build/Web && .Build/bin/phpunit -c phpunit.xml.dist --colors=always"
+            "export TYPO3_PATH_APP=$PWD/.Build && export TYPO3_PATH_WEB=$PWD/.Build/Web && .Build/bin/phpunit -c phpunit.xml.dist --colors=always"
         ],
         "test": [
             "@test:phpcs",
