--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,7 +1,7 @@
 <phpunit
         backupGlobals="true"
         backupStaticAttributes="false"
-        bootstrap=".Build/vendor/nimut/testing-framework/res/Configuration/UnitTestsBootstrap.php"
+        bootstrap=".Build/vendor/typo3/testing-framework/Resources/Core/Build/UnitTestsBootstrap.php"
         cacheResultFile=".Build/.phpunit.result.cache"
         colors="true"
         convertErrorsToExceptions="true"
@@ -16,6 +16,7 @@
 >
 
     <php>
+        <env name="TYPO3_PATH_APP" value=".Build" />
         <env name="TYPO3_PATH_WEB" value=".Build/Web" />
     </php>
 
