--- a/.github/workflows/phpci.yml
+++ b/.github/workflows/phpci.yml
@@ -19,10 +19,10 @@ jobs:
         strategy:
             matrix:
                 php-version:
-                    - "7.3"
                     - "7.4"
                     - "8.0"
                     - "8.1"
+                    - "8.2"
 
         steps:
             -
@@ -70,10 +70,10 @@ jobs:
                     - "test:phpmd"
                     - "test:phpstan"
                 php-version:
-                    - "7.3"
                     - "7.4"
                     - "8.0"
                     - "8.1"
+                    - "8.2"
 
         steps:
             -
@@ -118,21 +118,14 @@ jobs:
             fail-fast: false
             matrix:
                 include:
-                    -
-                        typo3-version: "^10.4"
-                        php-version: "7.3"
-                    -
-                        typo3-version: "^10.4"
+                    -   typo3-version: "^11.5"
                         php-version: "7.4"
-                    -
-                        typo3-version: "^11.5"
-                        php-version: "7.4"
-                    -
-                        typo3-version: "^11.5"
+                    -   typo3-version: "^11.5"
                         php-version: "8.0"
-                    -
-                        typo3-version: "^11.5"
+                    -   typo3-version: "^12.4"
                         php-version: "8.1"
+                    -   typo3-version: "^12.4"
+                        php-version: "8.2"
 
         steps:
             -
