--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,37 +1,20 @@
-<phpunit
-        backupGlobals="true"
-        backupStaticAttributes="false"
-        bootstrap=".Build/vendor/typo3/testing-framework/Resources/Core/Build/UnitTestsBootstrap.php"
-        cacheResultFile=".Build/.phpunit.result.cache"
-        colors="true"
-        convertErrorsToExceptions="true"
-        convertWarningsToExceptions="true"
-        forceCoversAnnotation="false"
-        processIsolation="false"
-        stopOnError="false"
-        stopOnFailure="false"
-        stopOnIncomplete="false"
-        stopOnSkipped="false"
-        verbose="false"
->
-
-    <php>
-        <env name="TYPO3_PATH_APP" value=".Build" />
-        <env name="TYPO3_PATH_WEB" value=".Build/Web" />
-    </php>
-
-    <testsuites>
-        <testsuite name="Unit Tests">
-            <directory>Tests/</directory>
-        </testsuite>
-    </testsuites>
-
-    <filter>
-        <whitelist processUncoveredFilesFromWhitelist="true">
-            <directory suffix=".php">./hooks</directory>
-            <directory suffix=".php">./rules</directory>
-            <directory suffix=".php">./sanitizer</directory>
-            <directory suffix=".php">./util</directory>
-        </whitelist>
-    </filter>
+<?xml version="1.0"?>
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" backupGlobals="true" bootstrap=".Build/vendor/typo3/testing-framework/Resources/Core/Build/UnitTestsBootstrap.php" colors="true" processIsolation="false" stopOnError="false" stopOnFailure="false" stopOnIncomplete="false" stopOnSkipped="false" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.5/phpunit.xsd" cacheDirectory=".phpunit.cache" backupStaticProperties="false" requireCoverageMetadata="false">
+  <php>
+    <env name="TYPO3_PATH_APP" value=".Build"/>
+    <env name="TYPO3_PATH_WEB" value=".Build/Web"/>
+  </php>
+  <testsuites>
+    <testsuite name="Unit Tests">
+      <directory>Tests/</directory>
+    </testsuite>
+  </testsuites>
+  <source>
+    <include>
+      <directory suffix=".php">./hooks</directory>
+      <directory suffix=".php">./rules</directory>
+      <directory suffix=".php">./sanitizer</directory>
+      <directory suffix=".php">./util</directory>
+    </include>
+  </source>
 </phpunit>
